# quant-risk-parity

./: .gitignore  README.md  pyproject.toml
.kiro/specs/60-40-portfolio-baseline/: design.md  requirements.md  tasks.md
analysis/: risk_parity_backtest_v2.py  risk_parity_paper_period.py  risk_parity_pie_charts.py  risk_parity_v3_robustness.py  risk_parity_v5_expanded.py
src/qrp/: backtest.py  cli.py  config.py  data.py  metrics.py  paths.py  visualize.py  weights.py
tests/: test_core.py
