[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-risk-parity"
version = "0.1.0"
description = "Risk Parity (Equal Risk Contribution) backtest with target volatility and costs."
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "yfinance>=0.2.30",
    "scipy>=1.10.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
]

[project.scripts]
qrp = "qrp.cli:app"
